🔧 Fix table visibility - 20vh at bottom

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ body {
 
 .table-container {
     position: fixed;
-    bottom: -5vh;
+    bottom: 0;
     left: 0;
     right: 0;
     z-index: 80;
@@ -121,7 +121,7 @@ body {
 
 .table-img {
     width: 100%;
-    height: 25vh;
+    height: 20vh;
     object-fit: cover;
     object-position: center top;
     display: block;
